--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,16 @@
     url("../fonts/opensanslight.woff") format("woff")
 }
 
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -41,6 +51,159 @@ body {
   color: #464646;
   background-color: #ffffff;
 }
+
 a {
   text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+}
+
+.button {
+  font-family: "Gilroy", "Arial", sans-serif;
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 24px;
+  color: #000000;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.main-header {
+  background-color: #f7e196;
+  color: #000000;
+}
+
+.search:focus {
+  /*Для нижней полосы*/
+  box-sizing: border-box;
+  outline: none;
+  box-shadow: 0 2px 0 #000000;
+}
+
+.search input[type="search"] {
+  background-color: transparent;
+  border: none;
+  opacity: 0.3;
+}
+
+.search input[type="search"]:hover {
+  opacity: 0.6;
+}
+
+.search input[type="search"]:focus {
+  opacity: 1;
+  outline: 2px solid #000000;
+}
+
+.search button {
+  padding: 10px 15px;
+  color: #000000;
+  background-color: transparent;
+  border: none;
+  outline: 2px solid #000000;
+}
+
+.search button:hover {
+  color: #ffffff;
+  background-color: #000000;
+
+}
+
+.search button:active {
+  background-color: #000000;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.search button:focus {
+  color: #ffffff;
+  background-color: #000000;
+
+  outline: 2px solid #ffffff;
+}
+
+.user-nav {
+  list-style: none;
+}
+
+.user-nav a,
+.user-nav a:visited {
+  color: #000000;
+}
+
+.main-nav-list {
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 24px;
+  font-family: "Gilroy", "Arial", sans-serif;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  list-style: none;
+}
+
+.main-nav-list a,
+.main-nav-list a:visited,
+.main-nav-sublist a,
+.main-nav-sublist a:visited {
+  color: #000000;
+}
+
+.main-nav-sublist {
+  /*display: none; */
+  list-style: none;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 36px;
+  font-family: "Open Sans" , "Arial", sans-serif;
+  letter-spacing: 0px;
+  text-transform: none;
+}
+
+.about-title {
+  font-size: 47px;
+  font-weight: 800;
+  line-height: 48px;
+  font-family: "Gilroy", "Arial", sans-serif;
+  color: #000000;
+}
+
+.about-list {
+  font-family: "Gilroy", "Arial", sans-serif;
+  font-size: 15px;
+  font-weight: 800;
+}
+
+.footer {
+  background-color: #464646;
+}
+
+.footer a,
+.footer p {
+  color: #ffffff;
+}
+
+.user-nav.inverted a,
+.user-nav.inverted a:visited {
+  color: #ffffff;
+}
+
+.main-nav-list.inverted a,
+.main-nav-list.inverted a:visited {
+  color: #ffffff;
+}
+
+.social-list {
+  list-style: none;
 }
