--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,14 @@ img {
   color: #000000;
 }
 
+.main-header .logo:hover {
+  opacity: 0.6;
+}
+
+.main-header .logo:active {
+  opacity: 0.3;
+}
+
 .search:focus {
   /*Для нижней полосы*/
   box-sizing: border-box;
@@ -130,8 +138,6 @@ img {
 .search button:focus {
   color: #ffffff;
   background-color: #000000;
-
-  outline: 2px solid #ffffff;
 }
 
 .user-nav {
@@ -141,6 +147,16 @@ img {
 .user-nav a,
 .user-nav a:visited {
   color: #000000;
+}
+
+.user-nav a:hover,
+.user-nav a:hover {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.user-nav a:active,
+.user-nav a:active {
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .main-nav-list {
@@ -158,6 +174,16 @@ img {
 .main-nav-sublist a,
 .main-nav-sublist a:visited {
   color: #000000;
+}
+
+.main-nav-list a:hover,
+.main-nav-sublist a:hover {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.main-nav-list a:active,
+.main-nav-sublist a:active {
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .main-nav-sublist {
@@ -180,9 +206,9 @@ img {
 }
 
 .about-list {
-  font-family: "Gilroy", "Arial", sans-serif;
   font-size: 15px;
   font-weight: 800;
+  font-family: "Gilroy", "Arial", sans-serif;
 }
 
 .footer {
@@ -194,16 +220,128 @@ img {
   color: #ffffff;
 }
 
+.footer .logo:hover {
+  opacity: 0.6;
+}
+
+.footer .logo:active {
+  opacity: 0.3;
+}
+
 .user-nav.inverted a,
 .user-nav.inverted a:visited {
-  color: #ffffff;
+  color:rgba(255, 255, 255, 0.6)
+}
+
+.user-nav.inverted a:hover {
+  color:rgba(255,255,255, 1)
+}
+
+.user-nav.inverted a:active {
+  color: rgba(255, 255, 255, 0.3)
 }
 
 .main-nav-list.inverted a,
 .main-nav-list.inverted a:visited {
-  color: #ffffff;
+  color: rgba(255, 255, 255, 1)
+}
+
+.main-nav-list.inverted a:hover {
+  color: rgba(255, 255, 255, 0.6)
+}
+
+.main-nav-list.inverted a:active {
+  color: rgba(255, 255, 255, 0.3)
 }
 
 .social-list {
   list-style: none;
+}
+
+/*--catalog page--*/
+.page-title {
+  font-size: 47px;
+  font-weight: 800;
+  line-height: 48px;
+  font-family: "Gilroy", "Arial", sans-serif;
+  color: #000000;
+}
+
+.breadcrumbs {
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 24px;
+  font-family: "Open Sans", "Arial", sans-serif;
+  color: #000000;
+  list-style: none;
+}
+
+.breadcrumbs a,
+.breadcrumbs a:visited {
+  color: #b2b2b2;
+}
+
+.breadcrumbs a:hover {
+  color: #666666;
+}
+
+.breadcrumbs a:active {
+  color: #e5e5e5;
+}
+
+.filter-item {
+  border: none;
+}
+
+.filter-item legend {
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 40px;
+  font-family: "Gilroy", "Arial", sans-serif;
+  color: #000000;
+}
+
+.filter-options-list {
+  list-style: none;
+}
+
+.filter-option {
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 40px;
+  font-family: "Open Sans";
+  color: #000000;
+}
+
+.filter .button {
+  border: none;
+  background-color: transparent;
+
+}
+
+.catalog-list {
+  list-style: none;
+}
+
+.catalog-item-title {
+    font-size: 18px;
+    font-weight: 800;
+    line-height: 24px;
+    font-family: "Gilroy", "Arial", sans-serif;
+    color: #000000;
+}
+
+.catalog-item-title a,
+.catalog-item-title a:visited,
+.catalog-item-title a:active {
+  color: #000000;
+}
+
+.catalog-item-price {
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 24px;
+  color: #464646;
+  font-family: "Gilroy";
+  text-align: right;
 }
