--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   url("../fonts/gilroylight.woff2") format("woff2"),
   url("../fonts/gilroylight.woff") format("woff")
 }
+
 @font-face {
   font-family: "Gilroy";
   font-style: normal;
@@ -14,6 +15,7 @@
     url("../fonts/gilroyextrabold.woff2") format("woff2"),
     url("../fonts/gilroyextrabold.woff") format("woff")
 }
+
 @font-face {
   font-family: "Open Sans";
   font-style: normal;
@@ -22,6 +24,7 @@
     url("../fonts/opensans.woff") format("woff2"),
     url("../fonts/opensans.woff") format("woff")
 }
+
 @font-face {
   font-family: "Open Sans";
   font-style: normal;
@@ -44,7 +47,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: "Open Sans", "Arial",  sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-size: 15px;
   font-weight: 300;
   line-height: 30px;
@@ -94,13 +97,13 @@ img {
   opacity: 0.3;
 }
 
-.search:focus {
-  /*Для нижней полосы*/
+/*
+.bottom-line {
   box-sizing: border-box;
   outline: none;
   box-shadow: 0 2px 0 #000000;
 }
-
+*/
 .search input[type="search"] {
   background-color: transparent;
   border: none;
@@ -127,7 +130,6 @@ img {
 .search button:hover {
   color: #ffffff;
   background-color: #000000;
-
 }
 
 .search button:active {
@@ -192,7 +194,7 @@ img {
   font-size: 15px;
   font-weight: 300;
   line-height: 36px;
-  font-family: "Open Sans" , "Arial", sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   letter-spacing: 0px;
   text-transform: none;
 }
@@ -230,11 +232,11 @@ img {
 
 .user-nav.inverted a,
 .user-nav.inverted a:visited {
-  color:rgba(255, 255, 255, 0.6)
+  color: rgba(255, 255, 255, 0.6)
 }
 
 .user-nav.inverted a:hover {
-  color:rgba(255,255,255, 1)
+  color: rgba(255,255,255, 1)
 }
 
 .user-nav.inverted a:active {
@@ -309,7 +311,7 @@ img {
   font-size: 14px;
   font-weight: 300;
   line-height: 40px;
-  font-family: "Open Sans";
+  font-family: "Open Sans", "Arial", sans-serif;
   color: #000000;
 }
 
@@ -342,6 +344,6 @@ img {
   font-weight: 300;
   line-height: 24px;
   color: #464646;
-  font-family: "Gilroy";
+  font-family: "Gilroy", "Arial", sans-serif;
   text-align: right;
 }
