--- a/css/style.css
+++ b/css/style.css
@@ -199,6 +199,131 @@ img {
   text-transform: none;
 }
 
+.slide-title {
+  font-size: 47px;
+  font-weight: 800;
+  line-height: 56px;
+  font-family: "Gilroy", "Arial", sans-serif;
+  color: #000000;
+}
+
+.slide-description {
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 30px;
+  font-family: "Open Sans", "Arial", sans-serif;
+  color: #000000;
+}
+
+.slide-table .table-th {
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 30px;
+  font-family: "Open Sans", "Arial", sans-serif;
+  color: #000000;
+}
+
+.slide-table .table-td {
+  font-size: 36px;
+  font-weight: 300;
+  line-height: 48px;
+  font-family: "Gilroy", "Arial", sans-serif;
+  color: #000000;
+}
+
+.popular-list {
+  list-style: none;
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 24px;
+  font-family: "Gilroy", "Arial", sans-serif;
+  color: #000000;
+}
+
+.popular-item {
+  background-color: #f7e196;
+}
+
+.popular-item:hover {
+  background-color: #f0c42e;
+}
+
+.popular-item:active {
+  opacity: 0.3;
+}
+
+.popular-item a{
+  text-decoration: none;
+}
+
+.popular-item a:visited {
+  color: #000000;
+}
+
+.services-btn-list {
+  list-style: none;
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 24px;
+  font-family: "Gilroy", "Arial", sans-serif;
+  letter-spacing: 4px;
+  color: #000000;
+  text-align: center;
+}
+.services-btn-list .button {
+  background-color: transparent;
+  border:none;
+}
+.services-btn-list .btn-current {
+  background-color: #000000;
+  color: #f7e184;
+}
+
+.partners-list {
+  list-style: none;
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 24px;
+  font-family: "Gilroy", "Arial", sans-serif;
+  color: #000000;
+}
+
+.partners-item:nth-child(1) {
+  background: #ffffff url('../img/logo-1.jpg') no-repeat 0;
+}
+
+.partners-item:nth-child(1):hover {
+  background-image: url('../img/logo-1-hover.jpg');
+}
+
+.partners-item:nth-child(2) {
+  background: #ffffff url('../img/logo-2.jpg') no-repeat 0;
+}
+
+.partners-item:nth-child(2):hover {
+  background-image: url('../img/logo-2-hover.jpg');
+}
+
+.partners-item:nth-child(3) {
+  background: #ffffff url('../img/logo-3.jpg') no-repeat 0;
+}
+
+.partners-item:nth-child(3):hover {
+  background-image: url('../img/logo-3-hover.jpg');
+}
+
+.partners-item:nth-child(4) {
+  background: #ffffff url('../img/logo-4.jpg') no-repeat 0;
+}
+
+.partners-item:nth-child(4):hover {
+  background-image: url('../img/logo-4-hover.jpg');
+}
+
+.partners-item a {
+  opacity: 0;
+}
+
 .about-title {
   font-size: 47px;
   font-weight: 800;
@@ -210,7 +335,9 @@ img {
 .about-list {
   font-size: 15px;
   font-weight: 800;
+  line-height: 30px;
   font-family: "Gilroy", "Arial", sans-serif;
+  color: #000000;
 }
 
 .footer {
@@ -230,29 +357,29 @@ img {
   opacity: 0.3;
 }
 
-.user-nav.inverted a,
-.user-nav.inverted a:visited {
+.user-nav-footer a,
+.user-nav-footer a:visited {
   color: rgba(255, 255, 255, 0.6)
 }
 
-.user-nav.inverted a:hover {
+.user-nav-footer a:hover {
   color: rgba(255,255,255, 1)
 }
 
-.user-nav.inverted a:active {
+.user-nav-footer a:active {
   color: rgba(255, 255, 255, 0.3)
 }
 
-.main-nav-list.inverted a,
-.main-nav-list.inverted a:visited {
+.main-nav-footer a,
+.main-nav-footer a:visited {
   color: rgba(255, 255, 255, 1)
 }
 
-.main-nav-list.inverted a:hover {
+.main-nav-footer a:hover {
   color: rgba(255, 255, 255, 0.6)
 }
 
-.main-nav-list.inverted a:active {
+.main-nav-footer a:active {
   color: rgba(255, 255, 255, 0.3)
 }
 
@@ -343,7 +470,95 @@ img {
   font-size: 16px;
   font-weight: 300;
   line-height: 24px;
-  color: #464646;
   font-family: "Gilroy", "Arial", sans-serif;
+  color: #464646;
   text-align: right;
+}
+
+.sort-title {
+    font-size: 16px;
+    font-weight: 800;
+    line-height: 24px;
+    font-family: "Gilroy", "Arial", sans-serif;
+    color: #000000;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+}
+
+.sort-options-list {
+  list-style: none;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  font-family: "Open Sans", "Arial", sans-serif;
+}
+
+.sort-option a {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.sort-option a:hover {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.sort-option a:active {
+  color: rgba(0, 0, 0, 1);
+}
+
+.sort-option.arrow-up a,
+.sort-option.arrow-down a{
+  opacity: 0;
+}
+
+.sort-option.arrow-up,
+.sort-option.arrow-down {
+  opacity: 0.3;
+}
+
+.sort-option.arrow-up:hover,
+.sort-option.arrow-down:hover {
+  opacity: 0.6;
+}
+
+.sort-option.arrow-up:active,
+.sort-option.arrow-down:active {
+  opacity: 1;
+}
+
+.sort-option.arrow-up {
+  background: #ffffff url('../img/icon-up-dir.svg') no-repeat 0;
+}
+
+.sort-option.arrow-down {
+  background: #ffffff url('../img/icon-down-dir.svg') no-repeat 0;
+}
+
+.pagination-list {
+  list-style: none;
+  font-size: 16px;
+  font-weight: 800;
+  line-height: 24px;
+  font-family: "Gilroy", "Arial", sans-serif;
+  color: #a4a4a4;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  background-color: #ebebeb;
+}
+
+.pagination-item a:visited {
+  color: inherit;
+}
+
+.pagination-current,
+.pagination-button {
+  color: #000000;
+}
+
+.pagination-button:hover {
+  background-color: #d9d9d9;
+}
+
+.pagination-button:active {
+  background-color: #d9d9d9;
+  color: #979797;
 }
