--- a/css/style.css
+++ b/css/style.css
@@ -232,12 +232,12 @@ img {
 }
 
 .popular-list {
-  list-style: none;
   font-size: 18px;
   font-weight: 800;
   line-height: 24px;
   font-family: "Gilroy", "Arial", sans-serif;
   color: #000000;
+  list-style: none;
 }
 
 .popular-item {
@@ -252,10 +252,7 @@ img {
   opacity: 0.3;
 }
 
-.popular-item a{
-  text-decoration: none;
-}
-
+.popular-item a,
 .popular-item a:visited {
   color: #000000;
 }
